/*
 * This file is part of OrangeHRM
 *
 * Copyright (C) 2020 onwards OrangeHRM (https://www.orangehrm.com/)
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 */

import 'react-native';
import {View} from 'react-native';
import React from 'react';
import MainLayout from 'layouts/MainLayout';
import {Provider} from 'react-redux';
import configureStore from 'store/configureStore';
import {render} from 'react-native-testing-library';
const mockStore = configureStore();

describe('layout/MainLayout', () => {
  test('test MainLayout layout', () => {
    const node = render(
      <Provider store={mockStore}>
        <MainLayout>
          <View style={{backgroundColor: 'orange'}} />
        </MainLayout>
      </Provider>,
    ).toJSON();
    expect(node).toMatchSnapshot();
  });

  test('test MainLayout layout::statusBarBackgroundColor', () => {
    const node = render(
      <Provider store={mockStore}>
        <MainLayout statusBarBackgroundColor={'orange'}>
          <View style={{backgroundColor: 'orange'}} />
        </MainLayout>
      </Provider>,
    ).toJSON();
    expect(node).toMatchSnapshot();
  });

  test('test MainLayout layout::footer', () => {
    const node = render(
      <Provider store={mockStore}>
        <MainLayout footer={<View style={{backgroundColor: 'orange'}} />}>
          <View style={{backgroundColor: 'orange'}} />
        </MainLayout>
      </Provider>,
    ).toJSON();
    expect(node).toMatchSnapshot();
  });
});
