// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout/MainLayout test MainLayout layout 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "flex": 1,
      }
    }
    contentInsetAdjustmentBehavior="automatic"
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="handled"
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`layout/MainLayout test MainLayout layout::footer 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    contentInsetAdjustmentBehavior="automatic"
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "orange",
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    onLayout={[Function]}
    style={
      {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`layout/MainLayout test MainLayout layout::statusBarBackgroundColor 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      {
        "flex": 1,
      }
    }
    contentInsetAdjustmentBehavior="automatic"
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="handled"
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
